crates/sui-graphql-macros/tests/compile/schema_validation_field_after_list_not_found.stderr
error: Field 'nonExistent' not found on type 'Checkpoint' in path 'checkpoints.nodes[].nonExistent'
 --> tests/compile/schema_validation_field_after_list_not_found.rs:7:5
  |
7 |     values: Vec<String>,
  |     ^^^^^^
